--- a/framework.report/test/org/plazmaforge/framework/report/resources/reports/Report1.report.xml
+++ b/framework.report/test/org/plazmaforge/framework/report/resources/reports/Report1.report.xml
@@ -1,4 +1,4 @@
-<report name="Report1" caption="Report 1">
+<report name="Report1" caption="Report 1" description="Report Description1">
 	<data-sources>
 		<data-source>
 			<fields>
