--- a/framework.report/test/org/plazmaforge/framework/report/resources/reports/Report1.report.xml
+++ b/framework.report/test/org/plazmaforge/framework/report/resources/reports/Report1.report.xml
@@ -3,7 +3,9 @@
 		<parameter name="PRICE_LIMIT" data-type="Float"><default-value>100</default-value></parameter>
 	</parameters>
 	<variables>
-		<variable name="FULL_PRODUCT_NAME"><expression>${GROUP_NAME} + "/" + ${PRODUCT_NAME}</expression></variable>
+		<variable name="FULL_PRODUCT_NAME" data-type="String"><expression>${GROUP_NAME} + "/" + ${PRODUCT_NAME}</expression></variable>
+		<variable name="GROUP_NAME_HEADER" data-type="String" resetType="Group" resetValue="PRODUCT_GROUP"><expression>"Group: "  + ${GROUP_NAME}</expression></variable>
+		<variable name="PRICE_AVG" data-type="Float" aggregation="AVG"><expression>${PRICE}</expression></variable>
 	</variables>
 	<data-sources>
 		<data-source>
