--- a/trunk/framework.report/test/org/plazmaforge/framework/report/resources/reports/Report1.report.xml
+++ b/trunk/framework.report/test/org/plazmaforge/framework/report/resources/reports/Report1.report.xml
@@ -20,7 +20,7 @@
 		</data-source>
 	</data-sources>
 	<templates>
-		<template type="Table" cell-border-rule="all" column-border-color="green" row-border-color="red">
+		<template type="Table" cell-border-rule="all" column-line-color="green" row-line-color="green" row-border="1">
 			<page-setup margin-left="21" margin-top="22" margin-right="23" margin-bottom="24" />
 			<columns>
 				<column width="100" />
@@ -61,7 +61,7 @@
 				</report-group>
 			</report-groups>
 			<bands>
-				<band type="ReportHeader">
+				<band type="ReportHeader" cell-border="none">
 					<rows>
 						<row height="20">
 							<cells>
@@ -82,12 +82,12 @@
 				</band>
 				<band type="ColumnHeader">
 					<rows>
-						<row height="30">
+						<row height="30" >
 							<cells>
-								<cell font="bold"><value>Product ID</value></cell>
-								<cell font="bold"><value>Product Name</value></cell>
-								<cell font="bold"><value>Price</value></cell>
-								<cell font="bold"><value>Full Name</value></cell>
+								<cell border-top="1" border-top-color="green" font="bold"><value>Product ID</value></cell>
+								<cell border-top="1" border-top-color="green" font="bold"><value>Product Name</value></cell>
+								<cell border-top="1" border-top-color="green" font="bold"><value>Price</value></cell>
+								<cell border-top="1" border-top-color="green" font="bold"><value>Full Name</value></cell>
 							</cells>
 						</row>
 					</rows>
