--- a/trunk/framework.report/test/org/plazmaforge/framework/report/resources/reports/Report1.report.xml
+++ b/trunk/framework.report/test/org/plazmaforge/framework/report/resources/reports/Report1.report.xml
@@ -82,12 +82,13 @@
 				</band>
 				<band type="ColumnHeader">
 					<rows>
-						<row height="30" >
+						<row height="30" cell-border-top="3" cell-border-top-color="green">
 							<cells>
-								<cell border-top="1" border-top-color="green" font="bold"><value>Product ID</value></cell>
-								<cell border-top="1" border-top-color="green" font="bold"><value>Product Name</value></cell>
-								<cell border-top="1" border-top-color="green" font="bold"><value>Price</value></cell>
-								<cell border-top="1" border-top-color="green" font="bold"><value>Full Name</value></cell>
+							 <!--  border-top="1" border-top-color="green" -->
+								<cell  border-top="1" font="bold"><value>Product ID</value></cell>
+								<cell  font="bold"><value>Product Name</value></cell>
+								<cell font="bold"><value>Price</value></cell>
+								<cell font="bold"><value>Full Name</value></cell>
 							</cells>
 						</row>
 					</rows>
