--- a/trunk/framework.report/test/org/plazmaforge/framework/report/resources/reports/Report1.report.xml
+++ b/trunk/framework.report/test/org/plazmaforge/framework/report/resources/reports/Report1.report.xml
@@ -104,6 +104,18 @@
 						</row>
 					</rows>
 				</band>
+				<band type="ColumnFooter">
+					<rows>
+						<row height="30" cell-border-top="1" cell-border-top-color="green">
+							<cells>
+								<cell font="bold"><value>Product ID---</value></cell>
+								<cell font="bold"><value>Product Name--</value></cell>
+								<cell format="#.00" data-type="Float" font="bold"><expression>$V{PRICE_AVG}</expression></cell>
+								<cell font="bold"><value>Full Name</value></cell>
+							</cells>
+						</row>
+					</rows>
+				</band>
 				
 				<band type="ReportFooter">
 					<rows>
