--- a/trunk/framework.report.test/src/org/plazmaforge/framework/report/test/resources/reports/DataSourceReport.jrxml
+++ b/trunk/framework.report.test/src/org/plazmaforge/framework/report/test/resources/reports/DataSourceReport.jrxml
@@ -1,5 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="DataSourceReport" pageWidth="595" pageHeight="842" columnWidth="515" leftMargin="40" rightMargin="40" topMargin="50" bottomMargin="50" >
+<?xml version="1.0" encoding="UTF-8"  ?>
+<!DOCTYPE jasperReport PUBLIC "//JasperReports//DTD Report Design//EN" "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
+<jasperReport
+ 
+     
+    name="DataSourceReport" 
+    pageWidth="595" 
+    pageHeight="842" 
+    columnWidth="515" 
+    leftMargin="40" 
+    rightMargin="40" 
+    topMargin="50" 
+    bottomMargin="50" >
+
+<!--
+    xmlns="http://jasperreports.sourceforge.net/jasperreports" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd"
+-->
 
 <!--
 	<property name="net.sf.jasperreports.print.create.bookmarks" value="true"/>
@@ -65,13 +82,24 @@
 
 	<title>
 		<band height="70">
-
 			<staticText>
-				<reportElement x="0" y="5" width="55" height="15" />
-				<textElement textAlignment="Center"/>
+				<reportElement x="0" y="2" width="550" height="30" mode="Opaque" /> <!-- backcolor="red" -->
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="16" />
+				</textElement>
 				<text>My Report</text>
 			</staticText>
-
+			<textField>
+				<reportElement x="0" y="32" width="550" height="15"/>
+				<textElement>
+					<font isBold="true" isItalic="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA["PRICE_LIMIT: "  + $P{PRICE_LIMIT}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="49" width="550" height="15" forecolor="green"/>
+				<textFieldExpression><![CDATA["FULL_PRODUCT_NAME: "  + $V{FULL_PRODUCT_NAME}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 
@@ -97,33 +125,124 @@
 
 -->
 
+	<columnHeader>
+		<band height="30">
+			<staticText>
+				<reportElement x="0" y="0" width="100" height="30" />
+				<box>
+					<topPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font isBold="true" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Product ID]]></text>
+			</staticText>
 
+			<staticText>
+				<reportElement x="100" y="0" width="150" height="30" />
+				<box>
+					<topPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font isBold="true" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Poduct Name]]></text>
+			</staticText>
+
+			<staticText>
+				<reportElement x="250" y="0" width="150" height="30" />
+				<box>
+					<topPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font isBold="true" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Price]]></text>
+			</staticText>
+
+			<staticText>
+				<reportElement x="400" y="0" width="150" height="30" />
+				<box>
+					<topPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font isBold="true" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Full Name]]></text>
+			</staticText>
+		
+		</band>
+	</columnHeader>
 	<detail>
 		<band height="15">
 			<textField>
 				<reportElement x="0" y="0" width="100" height="15" />
-				<textFieldExpression><![CDATA[$F{PRODUCT_ID}.toString()]]></textFieldExpression>
+				<box>
+					<leftPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{PRODUCT_ID}]]></textFieldExpression>
 			</textField>
 
 			<textField>
-				<reportElement x="101" y="0" width="150" height="15" />
-				<textFieldExpression><![CDATA[$F{PRODUCT_NAME}]]></textFieldExpression>
+				<reportElement x="100" y="0" width="150" height="15" />
+				<box>
+					<bottomPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{PRODUCT_NAME}]]></textFieldExpression>
+			</textField>
+
+			<textField pattern="#,##0.00">
+				<reportElement x="250" y="0" width="150" height="15" />
+				<box>
+					<bottomPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textFieldExpression class="java.lang.Float"><![CDATA[$F{PRICE}]]></textFieldExpression>
 			</textField>
 
 			<textField>
-				<reportElement x="251" y="0" width="150" height="15" />
-				<textFieldExpression><![CDATA[$F{PRICE}.toString()]]></textFieldExpression>
-			</textField>
-
-			<textField>
-				<reportElement x="401" y="0" width="150" height="15" />
-				<textFieldExpression><![CDATA[$V{FULL_PRODUCT_NAME}]]></textFieldExpression>
+				<reportElement x="400" y="0" width="150" height="15" />
+				<box>
+					<bottomPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textFieldExpression class="java.lang.String"><![CDATA[$V{FULL_PRODUCT_NAME}]]></textFieldExpression>
 			</textField>
 
 		</band>
 	</detail>
 
 
+<columnFooter>
+		<band height="30">
+			<staticText>
+				<reportElement x="0" y="0" width="100" height="30" />
+				<box>
+					<topPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font isBold="true" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Product ID]]></text>
+			</staticText>
+	</band>
+</columnFooter>
+			
 <!--
 	<pageFooter>
 		<band height="40">
