--- a/framework.report/docs/guide/css/style.css
+++ b/framework.report/docs/guide/css/style.css
@@ -48,3 +48,21 @@ pre .cmt {
 .grid-cell {
 	border: 1px solid #e1e1e8;
 }
+
+
+
+pre.prettyprint {
+    border: 1px solid #d6d6d6;
+    background-color: #eee;
+    width: 98%;
+    border-radius: 0;
+    padding: 5px;
+    margin: 0;
+    margin-bottom: 10px;
+    font-size: 13px;
+    overflow: auto;
+}
+
+pre.prettyprint {
+    line-height: 16px;
+}
